@@ -505,6 +505,17 @@ Use CREATE-TEMP-F for creating temp copy."
   (add-to-list 'flymake-allowed-file-name-masks
                '("\\.\\(?:c\\(?:pp\\|xx\\|\\+\\+\\)?\\|CC\\)\\'"
                  flymake-simple-make-gcc-init)))
+(when (executable-find "pyflakes")
+  (defun flymake-pyflakes-init ()
+    (let* ((temp-file (flymake-init-create-temp-buffer-copy
+                       'flymake-create-temp-inplace))
+           (local-file (file-relative-name
+                        temp-file
+                        (file-name-directory buffer-file-name))))
+      (list "pyflakes" (list local-file))))
+  (add-to-list 'flymake-allowed-file-name-masks
+               '("\\.py\\'" flymake-pyflakes-init)))
+
 (defun flymake-display-current-error ()
   "Display errors/warnings under cursor."
   (interactive)
